# escape-fel

./: -remote --tags origin  .gitignore  .readthedocs.yaml  .travis.yml  README.md  Untitled.ipynb  Untitled1.ipynb  __init__.py  environment.yml  pyproject.toml  requirements.txt  setup.py  test.h5  test_esc.py
conda-forge-recipe/: meta.yaml
conda-recipe/: meta.yaml
docs/: concepts.md  conf.py  index.rst  installation.md  requirements.txt
escape/: __init__.py  plot2D_dev.py  plot_stack_dev.py  plot_utilities.py  plot_utils.py  swissfel_parse.py  utilities.py
examples/: Bernina_Bi_analysis_example.ipynb  escape example storage.ipynb  preamble.ipynb
logs/: dask-workers-71b8f83acf33a70211799e9569d47b26d7fa8680-2018-10-20.1034.err  dask-workers-71b8f83acf33a70211799e9569d47b26d7fa8680-2018-10-20.1035.err  dask-workers-71b8f83acf33a70211799e9569d47b26d7fa8680-2018-10-20.1036.err  dask-workers-71b8f83acf33a70211799e9569d47b26d7fa8680-2018-10-20.1037.err  dask-workers-71b8f83acf33a70211799e9569d47b26d7fa8680-2018-10-20.1038.err  dask-workers-71b8f83acf33a70211799e9569d47b26d7fa8680-2018-10-20.1039.err  dask-workers-71b8f83acf33a70211799e9569d47b26d7fa8680-2018-10-20.1040.err  dask-workers-71b8f83acf33a70211799e9569d47b26d7fa8680-2018-10-20.1041.err  dask-workers-71b8f83acf33a70211799e9569d47b26d7fa8680-2018-10-20.1042.err  dask-workers-71b8f83acf33a70211799e9569d47b26d7fa8680-2018-10-20.1043.err  dask-workers-71b8f83acf33a70211799e9569d47b26d7fa8680-2018-10-20.1044.err  dask-workers-71b8f83acf33a70211799e9569d47b26d7fa8680-2018-10-20.1045.err  (+18 more)
parse/: swissfel.py
(+117 files in other folders)
