[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "escape-fel"
version = "0.1.0"
description = "Event Synchronous Categorisation And Processing Environment — event-based data framework for free-electron lasers"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Henrik Lemke", email = "h.t.lemke@gmail.com" }]
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "dask[array]",
    "h5py",
    "zarr",
    "hickle",
    "tqdm",
    "rich",
    "matplotlib",
    "pandas",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
]

[project.urls]
Homepage = "https://github.com/htlemke/escape-fel"
Documentation = "https://escape-fel.readthedocs.io"
Repository = "https://github.com/htlemke/escape-fel"
Issues = "https://github.com/htlemke/escape-fel/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["escape*"]

